--- a/Uppgifter/donaldduck/problem_statement/problem.en.tex
+++ b/Uppgifter/donaldduck/problem_statement/problem.en.tex
@@ -5,14 +5,16 @@ Quack-it, this was very untimely. Scrooge McDuck namely has a very important que
 
 In order to not make his uncle furious, Donald Duck has asked you for help. He will give you the two
 mirror inverted numbers he sees on the two money bags. Your task is to help him choose the biggest
-of these numbers. Print “1” if Donald should choose the first number and “2” if he should choose the
+of these numbers. Print \texttt{1} if Donald should choose the first number and \texttt{2} if he should choose the
 second number. Keep in mind: The mirror-inversion has made Donald see twos as fives and fives as twos. Otherwise all numbers represent themselves. The bags are guaranteed to have a different amount of money in them.
 
 \section*{Input}
 The first, and only, line of input contains two space separated integer numbers, $N$ and $M$ ($0
 \leq N, M \leq 1 000 000$)
 
-%osäker på formatteringen vid sample cases
+\section*{Output}
+Output either \texttt{1} or \texttt{2}, the number of the money bag that has the most money in it.
+
 \caption{Sample Input 1}
 
 \caption{Sample Input 2}
