[kcud] ps- and gen-clarification (no leading zeroes), created secret testcases

--- a/Uppgifter/donaldduck/problem_statement/problem.en.tex
+++ b/Uppgifter/donaldduck/problem_statement/problem.en.tex
@@ -7,7 +7,8 @@ In order to not make his uncle furious, Donald Duck has asked you for help. He w
 mirror inverted numbers he sees on the two money bags. Your task is to help him choose the biggest
 of these numbers. Print \texttt{1} if Donald should choose the first number and \texttt{2} if he should choose the
 second number. Keep in mind: The mirror-inversion has made Donald see twos as fives and fives as twos.
-Otherwise Donald Duck will see the numbers as they are, but in reversed order. The bags cannot contain the same amount of money.
+Otherwise Donald Duck will see the numbers as they are, but in reversed order. The bags cannot
+contain the same amount of money and their real, non-inverted, number does not have a leading zero.
 
 \section*{Input}
 The first, and only, line of input contains two space separated integer numbers $N$ and $M$ ($0
