[kcud] minor statement changes & few more cases

--- a/Uppgifter/donaldduck/problem_statement/problem.en.tex
+++ b/Uppgifter/donaldduck/problem_statement/problem.en.tex
@@ -6,13 +6,13 @@ Quack-it, this was very untimely. Scrooge McDuck namely has a very important que
 In order to not make his uncle furious, Donald Duck has asked you for help. He will give you the two
 mirror inverted numbers he sees on the two money bags. Your task is to help him choose the biggest
 of these numbers. Print \texttt{1} if Donald should choose the first number and \texttt{2} if he should choose the
-second number. Keep in mind: The mirror-inversion has made Donald see twos as fives and fives as twos.
-Otherwise Donald Duck will see the numbers as they are, but in reversed order. The bags cannot
-contain the same amount of money and their real, non-inverted, number does not have a leading zero.
+second number. Keep in mind: The mirror reversal has made Donald see twos as fives and fives as twos.
+Otherwise Donald Duck will see the numbers as they are, but in reversed order. The bags don't
+contain the same amount of money and the numbers on the bags neither start nor end with a zero.
 
 \section*{Input}
-The first, and only, line of input contains two space separated integer numbers $N$ and $M$ ($0
-\leq N, M \leq 1 000 000$)
+The input consists of a single line with two space-separated integers $N$ and $M$ ($1
+\leq N, M < 10^6$)
 
 \section*{Output}
 Output \texttt{1} if the first bag has more money, or \texttt{2} if the second one has more in it.
