--- a/Uppgifter/chactl/problem_statement/problem.en.tex
+++ b/Uppgifter/chactl/problem_statement/problem.en.tex
@@ -1,12 +1,12 @@
 \problemname{CHACTL}
-Seasoned competitive programmers are quite familiar with \textsc{KACTL}, a very good algorithm repository
-designed for use in the ICPC. The problem setters of Chalmers Challenge 2021 count themselves to
+Seasoned competitive programmers are quite familiar with \href{https://github.com/kth-competitive-programming/kactl}{\textsc{KACTL}}, a very good algorithm repository designed for use in the ICPC.
+The problem setters of Chalmers Challenge 2021 count themselves to
 this group, but have in preparation for this contest noticed two serious flaws with it.
 
 First, it turns out the \textsc{K} in \textsc{KACTL} stands for \textsc{KTH}! This is clearly
 unacceptable and needs to be remedied. Second, the $26$-page limit prevents the repository from
 achieving true greatness. Hence, we introduce \textsc{CHACTL}: Chalmers Competition Template Library
-with no less than $2^{26}$ pages. This is plenty space for all distibuted quadratic SIMD, assault and
+with no less than $2^{26}$ pages. This is plenty space for all distributed quadratic SIMD, assault and
 battery of floating-point numbers and cryptic guides to crossword solving you could ever wish for!
 
 During development, Dragos came up to us and said that our users need a proper navigation system to
