--- a/Uppgifter/backar/problem_statement/problem.en.tex
+++ b/Uppgifter/backar/problem_statement/problem.en.tex
@@ -1,4 +1,4 @@
-\problemname{Antivirus}
+\problemname{Hills in Gothenburg}
 
 As most students are aware, Gothenburg somehow seems to have more roads going uphill than downhill,
 regardless of which way you're going. The knowledge of this made Lazy Smurf feel even more hopeless
@@ -15,7 +15,7 @@ is the distance uphill the bicycle needs to be lead. To minimize the amount Lazy
 the bicycle, we want to find the way from his location to Smurfette's which minimizes the total
 height difference for all steps between the locations, with steps going downhill counting as 0.
 
-\section*{Indata}
+\section*{Input}
 The first line contains two numbers $N$ and $M$ with a space between them. As previously stated, $N$
 is the number of spots in the city, and $M$ is the number of direct paths between them.
 
@@ -28,10 +28,19 @@ represent the height of the $i$th spot.
 On each of the following $M$ rows, there will be two numbers $i$ and $j$, meaning that there is a
 path between spot $i$ and spot $j$.
 
-
-\section*{Utdata}
+\section*{Output}
 
 The program will output one number which is the minimum total uphill distance Lazy Smurf has to
 travel to get to Smurfette.
 
-\section*{Exempelfall}
+\section*{Notes}
+
+In sample one, the shortest way is going $1 - 2 - 4$, which has a total uphill distance of $1+0=1$.
+If you would instead have taken the path $1 - 3 - 4$, the total uphill distance would have been
+$0+2=2$.
+
+In sample two, there are a few paths of equal length, $1 - 7 - 6 - 5$ being one of length $0+4+3=7$.
+Another path of length $7$ would be $1 - 7 - 4 - 5$. A path of length other than $7$ would be
+$1-2-3-4-5$, having a length of $0+3+0+6 = 9$.
+
+\section*{Samples}
