--- a/Uppgifter/backar/problem_statement/problem.en.tex
+++ b/Uppgifter/backar/problem_statement/problem.en.tex
@@ -7,8 +7,9 @@ fine downhill, the pedals were broken and he had to lead the bicycle uphill. Now
 your help finding the path around the city to Smurfette which makes him have to lead the bicycle
 uphill the least.
 
-As everyone knows, all of Gothenburg can be represented as a graph \footnote{https://en.wikipedia.
-org /wiki/Graph_(discrete_mathematics)}: a list of $N$ spots in the city, with $M$ direct paths
+As everyone knows, all of Gothenburg can be represented as a graph
+\footnote{\url{https://en.wikipedia.org/wiki/Graph_(discrete_mathematics)}}:
+a list of $N$ spots in the city, with $M$ direct paths
 between the spots (every path leads directly between two spots). Every spot in the city has a known
 height $h_i$, and if there is direct path between spot $i$ and $j$, the height difference $h_i-h_j$
 is the distance uphill the bicycle needs to be lead. To minimize the amount Lazy Smurf needs to lead
