--- a/Uppgifter/backar/problem_statement/problem.en.tex
+++ b/Uppgifter/backar/problem_statement/problem.en.tex
@@ -2,46 +2,45 @@
 
 As most students are aware, Gothenburg somehow seems to have more roads going uphill than downhill,
 regardless of which way you're going. The knowledge of this made Lazy Smurf feel even more hopeless
-when his bike broke in the middle of the city, on his way to Smurfette. While the bike could ride
-fine downhill, the pedals were broken and he had to lead the bicycle uphill. Now Lazy Smurf needs
-your help finding the path around the city to Smurfette which makes him have to lead the bicycle
+when his bicycle broke down in the middle of the city, on his way to Smurfette. While the bicycle could ride
+fine downhill, the pedals were broken and he had to walk with the bicycle on the uphill roads. Now Lazy Smurf needs
+your help finding the path to Smurfette which makes him have to walk
 uphill the least.
 
 As everyone knows, all of Gothenburg can be represented as a graph
 \footnote{\url{https://en.wikipedia.org/wiki/Graph_(discrete_mathematics)}}:
-a list of $N$ spots in the city, with $M$ direct paths
-between the spots (every path leads directly between two spots). Every spot in the city has a known
-height $h_i$, and if there is direct path between spot $i$ and $j$, the height difference $h_i-h_j$
-is the distance uphill the bicycle needs to be lead. To minimize the amount Lazy Smurf needs to lead
-the bicycle, we want to find the way from his location to Smurfette's which minimizes the total
-height difference for all steps between the locations, with steps going downhill counting as 0.
+a list of $N$ spots in the city (numbered from $1$ to $N$), with $M$ direct roads
+between the spots (each road goes directly between two spots). Each spot in the city has a known
+height $h_i$, and if there is a direct path between spot $i$ and $j$, the height difference $h_i-h_j$
+is the uphill distance to walk (if it is positive). To minimize the amount Lazy Smurf has to walk
+with the bicycle, we want to find the path from his location to Smurfette's which minimizes the total
+height difference for all roads between their locations, counting downhill and flat roads as 0.
 
 \section*{Input}
-The first line contains two numbers $N$ and $M$ with a space between them. As previously stated, $N$
-is the number of spots in the city, and $M$ is the number of direct paths between them.
+The first line contains two numbers $N$ and $M$ with a space between them. $N$
+is the number of spots in the city, and $M$ is the number of roads.
 
 On the second row, there are two numbers separated by a space. The first number is the spot where
 Lazy Smurf is located, the second is the spot where Smurfette is located.
 
-On the fourth row, there are $N$ numbers separated by spaces. The numbers $h_i$ ($1 \le i \le N$)
+On the third row, there are $N$ numbers separated by spaces. The numbers $h_i$ ($1 \le i \le N$)
 represent the height of the $i$th spot.
 
 On each of the following $M$ rows, there will be two numbers $i$ and $j$, meaning that there is a
-path between spot $i$ and spot $j$.
+road between spot $i$ and spot $j$.
 
 \section*{Output}
 
-The program will output one number which is the minimum total uphill distance Lazy Smurf has to
+Output one number, the minimum total uphill distance Lazy Smurf has to
 travel to get to Smurfette.
 
 \section*{Notes}
 
-In sample one, the shortest way is going $1 - 2 - 4$, which has a total uphill distance of $1+0=1$.
-If you would instead have taken the path $1 - 3 - 4$, the total uphill distance would have been
-$0+2=2$.
+In sample one, the best path is to go \texttt{1-2-4}, which has a total uphill distance of $1+0=1$.
+If you instead took the path \texttt{1-3-4}, the total uphill distance would have been $0+2=2$.
 
-In sample two, there are a few paths of equal length, $1 - 7 - 6 - 5$ being one of length $0+4+3=7$.
-Another path of length $7$ would be $1 - 7 - 4 - 5$. A path of length other than $7$ would be
-$1-2-3-4-5$, having a length of $0+3+0+6 = 9$.
+In sample two, \texttt{1-7-6-5} is one example of a path with a minimal the upphill distance of $0+4+3=7$.
+Another possibility with uphill distance $7$ is \texttt{1-7-4-5}. An example of a path with a different uphill distance is
+\texttt{1-2-3-4-5}, having an uphill distance of $0+3+0+6 = 9$.
 
 \section*{Samples}
