[chactl] added solutions

--- a/Uppgifter/chactl/problem_statement/problem.en.tex
+++ b/Uppgifter/chactl/problem_statement/problem.en.tex
@@ -23,7 +23,7 @@ smallest number of traversals required to look up all the algorithms?
 
 \section*{Input}
 The first line contains one integer $N$, $1 \le N \le 10^5$. The following $N$ lines each contain
-one integer. Line $i$ contains $P_i$, $0 \le P_i \le 2^{26}$.
+one integer. Line $i$ contains $P_i$, $0 \le P_i < 2^{26}$.
 
 \section*{Output}
 Output the smallest number of traversals required to look up the algorithms.
