very small statement changes

--- a/Uppgifter/antivirus/problem_statement/problem.tex
+++ b/Uppgifter/antivirus/problem_statement/problem.tex
@@ -4,7 +4,7 @@ A computer network has been infected by evil viruses, so Hacke Hackspett \footno
 
 Each computer in the network has some number of viruses or antiviruses. There can never be both viruses and antiviruses in the same computer at the same time because they would immediately delete each other in pairs.
 
-First, Hacke placed the $N$ computers in a row and numbered them from left to right with numbers $1$ to $N$. He then used $N$ one-way network cables to connect each computer to exactly one other computer.
+First, Hacke placed the $N$ computers in a row and numbered them from left to right with numbers $1$ to $N$. He then used $N$ one-way network cables to connect each computer to exactly one other computer. To make the setup tidy, he made sure that each computer is connected to a computer further to the left, except for computer number $1$, which could be connected to any other computer.
 
 Each day, starting with day 1, Hacke will let the computer with the most antiviruses send them all to the computer that it is connected to. If multiple computers are tied for most antiviruses, he chooses the one furthest to the left (the one with the smallest number). If a virus-infected computer receives antiviruses, the viruses and antiviruses will delete each other in pairs. For example, if there are $5$ viruses in a computer when it receives $3$ antiviruses, only $2$ viruses will remain.
 
