--- a/Uppgifter/porridge/problem_statement/problem.tex
+++ b/Uppgifter/porridge/problem_statement/problem.tex
@@ -1,4 +1,4 @@
-\problemname{Perfect Porridge Problem}
+\problemname{Perfect Porridge}
 As a true student Lucky Luke eats a big bowl of perfect porridge each morning. Luke’s goal in life is to get every chalmerist to \textsc{love} porridge.
 
 In the faculty there are $N$ yet-to-be-enlightened students. Luke is unfortunately not necessarily
@@ -17,7 +17,7 @@ impatience $I_i$ will still be at the table at time $I_i$, but not at time $I_i+
 
 
 \section*{Input}
-The first line of input contains two integers $N$, $1 \leq N \leq 500\,000$, the number of students and $M$, $1 \leq M \leq 10^9$, the number of minutes it takes for warm porridge to get cold. The second line contains the $N$ integers $I_0, I_1 \ldots I_{N-1}$, where $I_i$, $1 \leq I_i \leq 10^9$, denotes the impatience for student $i$.
+The first line of input contains two integers $N$, $1 \leq N \leq 500\,000$, the number of students and $M$, $1 \leq M \leq 10^9$, the number of minutes it takes for warm porridge to get cold. The second line contains the $N$ integers $I_0, I_1 \ldots I_{N-1}$, where $I_i$, $1 \leq I_i \leq 10^9$, denotes the impatience of student $i$.
 
 
 \section*{Output}
