--- a/Uppgifter/hills/problem_statement/problem.en.tex
+++ b/Uppgifter/hills/problem_statement/problem.en.tex
@@ -9,9 +9,9 @@ uphill the least.
 
 As everyone knows, all of Gothenburg can be represented as a graph
 \footnote{\url{https://en.wikipedia.org/wiki/Graph_(discrete_mathematics)}}:
-a list of $N$ spots in the city (numbered from $1$ to $N$), with $M$ direct roads
-between the spots (each road goes directly between two spots). Each spot in the city has a known
-height $h_i$, and if there is a direct path between spot $i$ and $j$, the height difference $h_i-h_j$
+$N$ spots (numbered from $1$ to $N$), and $M$ roads
+(each road going directly between two spots). Each spot in the city has a known
+height $h_i$, and if there is a direct road between spot $i$ and $j$, the height difference $h_i-h_j$
 is the uphill distance to walk (if it is positive). To minimize the amount Lazy Smurf has to walk
 with the bicycle, we want to find the path from his location to Smurfette's which minimizes the total
 height difference for all roads between their locations, counting downhill and flat roads as 0.
@@ -27,7 +27,7 @@ On the third row, there are $N$ numbers separated by spaces. The numbers $h_i$ (
 represent the height of the $i$th spot. It is always the case that $ -10^5 \le h_i \le 10^5 $.
 
 On each of the following $M$ rows, there will be two numbers $i$ and $j$, meaning that there is a
-road between spot $i$ and spot $j$. $i \ne j $, and every road will be specified at most once.
+road between spot $i$ and spot $j$. $i \ne j$, and every road will be specified exactly once.
 
 \section*{Output}
 
@@ -39,7 +39,7 @@ travel to get to Smurfette.
 In sample one, the best path is to go \texttt{1-2-4}, which has a total uphill distance of $1+0=1$.
 If you instead took the path \texttt{1-3-4}, the total uphill distance would have been $0+2=2$.
 
-In sample two, \texttt{1-7-6-5} is one example of a path with a minimal the upphill distance of $0+4+3=7$.
+In sample two, \texttt{1-7-6-5} is one example of a path with the minimal upphill distance of $0+4+3=7$.
 Another possibility with uphill distance $7$ is \texttt{1-7-4-5}. An example of a path with a different uphill distance is
 \texttt{1-2-3-4-5}, having an uphill distance of $0+3+0+6 = 9$.
 
