[kcud] added image to problem statement

--- a/Uppgifter/kcud/problem_statement/problem.en.tex
+++ b/Uppgifter/kcud/problem_statement/problem.en.tex
@@ -1,4 +1,5 @@
 \problemname{kcuD dlanoD}
+\includegraphics[width=0.5\textwidth]{moneybags.jpg}
 Oh no! Donald Duck accidentally went through Professor Ludwig von Drake’s reversing machine, so now everything he sees is mirror inverted.
 
 Quack-it, this was very untimely. Scrooge McDuck namely has a very important quest for Donald Duck. He needs Donald to choose the biggest out of two money bags so that he, Mr. McDuck, can become even richer than he already is.
