[hills] minimal statement change

--- a/Uppgifter/hills/problem_statement/problem.en.tex
+++ b/Uppgifter/hills/problem_statement/problem.en.tex
@@ -14,7 +14,7 @@ $N$ spots (numbered from $1$ to $N$), and $M$ roads
 height $h_i$, and if there is a direct road between spot $i$ and $j$, the height difference $h_i-h_j$
 is the uphill distance to walk (if it is positive). To minimize the amount Lazy Smurf has to walk
 with the bicycle, we want to find the path from his location to Smurfette's which minimizes the total
-height difference for all roads between their locations, counting downhill and flat roads as 0.
+height difference for all roads between their locations, counting downhill and flat roads as $0$.
 
 \section*{Input}
 The first line contains two numbers $N$ and $M$ with a space between them. $N$
