[kcud] image alignment

--- a/Uppgifter/kcud/problem_statement/problem.en.tex
+++ b/Uppgifter/kcud/problem_statement/problem.en.tex
@@ -1,8 +1,13 @@
 \problemname{kcuD dlanoD}
-\includegraphics[width=0.5\textwidth]{moneybags.jpg}
 Oh no! Donald Duck accidentally went through Professor Ludwig von Drake’s reversing machine, so now everything he sees is mirror inverted.
 
 Quack-it, this was very untimely. Scrooge McDuck namely has a very important quest for Donald Duck. He needs Donald to choose the biggest out of two money bags so that he, Mr. McDuck, can become even richer than he already is.
+
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[width=0.5\textwidth]{moneybags.jpg}
+\end{center}
+\end{figure}
 
 In order to not make his uncle furious, Donald Duck has asked you for help. He will give you the two
 mirror inverted numbers he sees on the two money bags. Your task is to help him choose the biggest
